--- a/AplicacionCorredoresV1/src/interfaz/AltaCarreras.form
+++ b/AplicacionCorredoresV1/src/interfaz/AltaCarreras.form
@@ -46,11 +46,7 @@
               </Group>
               <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jButtonLimpiar" pref="169" max="32767" attributes="0"/>
-                      <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="jTextFieldLugar" alignment="0" max="32767" attributes="0"/>
                           <Component id="jSpinnerFecha" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -58,6 +54,10 @@
                           <Component id="jTextFieldNumeroMaxParticipantes" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="153" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Component id="jButtonLimpiar" min="-2" pref="150" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
